--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,13 +1,10 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": true,
-    "anonymousAuthentication": false,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:29711",
-      "sslPort": 44394
-    }
-  },
   "profiles": {
+    "Monster-Stop-full": {
+      "commandName": "Project",
+      "sqlDebugging": true
+    },
+
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
@@ -17,21 +14,25 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7163;http://localhost:5225",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
+
+
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "sqlDebugging": true
+    }
+  },
+  
+
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:51408/",
+      "sslPort": 44314
     }
   }
 }
